[package]
name = "cita-ed25519"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rustc-serialize = "0.3"
sodiumoxide = "0.2"
cita-types = { git = "https://github.com/cita-cloud/cita-types",branch = "main"}
hashable = { git = "https://github.com/cita-cloud/hashable",branch = "main"}
cita-crypto-trait = { git = "https://github.com/cita-cloud/cita-crypto-trait",branch = "main" }
rlp = "0.5"
serde = "1.0"

[dev-dependencies]
bincode = "0.8.0"

[features]
default = ["sha3hash"]
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
